module(
    name = "ros2_polyglot",
    version = "0.0.1",
    compatibility_level = 0,
)

# central bazel registry
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_rust", version = "0.64.0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

bazel_dep(name = "rclcpp", version = "30.0.0")
bazel_dep(name = "rmw_implementation", version = "3.1.1")
bazel_dep(name = "rmw_zenoh_cpp", version = "0.8.1")
bazel_dep(name = "std_msgs", version = "5.8.1")
bazel_dep(name = "rosidl_cmake", version = "5.0.0")
bazel_dep(name = "rosidl_generator_cpp", version = "5.0.0")


crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//rust_talker:Cargo.toml",
        "//rust_listener:Cargo.toml",
    ],
)

use_repo(crate, "crates")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(llvm_version = "20.1.7")
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
# nightly for the time macros
rust.toolchain(
    edition = "2024",
    versions = ["nightly/2025-12-01"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
